Umstellung der Parameter fuer Extract auf ein Objekt